# logaritmos-t3

./: CMakeLists.txt  README.md  experimentacion.cpp  experimentacion1.cpp  experimentacion2.cpp  geogebra-export.ggb  prueba.cpp  tarea.cpp  tarea.hpp
